[EVO] Add client/server app